--- a/table.html
+++ b/table.html
@@ -14,7 +14,7 @@
   </style>
 </head>
 <body>
-  <h1>Durts - 6 Column Tables</h1>
+  <h1>Durts Records</h1>
   <p><a href="index.html">Back to Homepage</a></p>
 
   <!-- Table 1: 301 -->
@@ -22,30 +22,26 @@
   <table>
     <thead>
       <tr>
-        <th>ID</th>
-        <th>Name</th>
-        <th>Category</th>
+        <th>Books</th>
+        <th>Player</th>
         <th>Date</th>
-        <th>Status</th>
-        <th>Remarks</th>
       </tr>
     </thead>
     <tbody>
       <tr>
-        <td>301-001</td>
-        <td>Gamma</td>
-        <td>Control</td>
-        <td>2025-05-04</td>
-        <td>Active</td>
-        <td>Main system</td>
+        <td>*6 1/3 Books</td>
+        <td>SW</td>
+        <td>11/08/2024</td>
       </tr>
       <tr>
-        <td>301-002</td>
-        <td>Delta</td>
-        <td>Sensor</td>
-        <td>2025-05-05</td>
-        <td>Offline</td>
-        <td>Maintenance scheduled</td>
+        <td>*6 1/3 Books</td>
+        <td>AW</td>
+        <td>11/02/24</td>
+      </tr>
+      <tr>
+        <td>9 Books</td>
+        <td>RS</td>
+        <td>03/07/2024</td>
       </tr>
     </tbody>
   </table>
@@ -55,30 +51,93 @@
   <table>
     <thead>
       <tr>
-        <th>ID</th>
-        <th>Channel</th>
-        <th>Type</th>
-        <th>Status</th>
-        <th>Signal</th>
-        <th>Description</th>
+        <th>Books</th>
+        <th>Player</th>
+        <th>Date</th>
       </tr>
     </thead>
     <tbody>
       <tr>
-        <td>301-DI-01</td>
-        <td>DI1</td>
-        <td>Digital In</td>
-        <td>High</td>
-        <td>1</td>
-        <td>Door Sensor</td>
+        <td>*7 2/3 Books</td>
+        <td>SW</td>
+        <td>10/11/2024</td>
       </tr>
       <tr>
-        <td>301-DO-01</td>
-        <td>DO1</td>
-        <td>Digital Out</td>
-        <td>Low</td>
-        <td>0</td>
-        <td>Alarm Output</td>
+        <td>8 2/3 Books</td>
+        <td>AW</td>
+        <td>04/15/2024</td>
+      </tr>
+    </tbody>
+  </table>
+
+  <!-- Table 3: 501 -->
+  <h2>501</h2>
+  <table>
+    <thead>
+      <tr>
+        <th>Books</th>
+        <th>Player</th>
+        <th>Date</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>*9 Books</td>
+        <td>SW</td>
+        <td>03/26/2025</td>
+      </tr>
+      <tr>
+        <td>14 2/3 Books</td>
+        <td>RS</td>
+        <td>01/17/2025</td>
+      </tr>
+    </tbody>
+  </table>
+
+  <!-- Table 4: 901 -->
+  <h2>501</h2>
+  <table>
+    <thead>
+      <tr>
+        <th>Books</th>
+        <th>Player</th>
+        <th>Date</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>*20 Books</td>
+        <td>SW</td>
+        <td>12/09/2024</td>
+      </tr>
+      <tr>
+        <td>24 Books</td>
+        <td>AW</td>
+        <td>04/15/2025</td>
+      </tr>
+    </tbody>
+  </table>
+  
+  <!-- Table 5: Round the Clock -->
+  <h2>Round the Clock</h2>
+  <table>
+    <thead>
+      <tr>
+        <th>Books</th>
+        <th>Player</th>
+        <th>Date</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>*10 1/3 Books</td>
+        <td>AW</td>
+        <td>01/14/2025</td>
+      </tr>
+      <tr>
+        <td>14 1/3 Books</td>
+        <td>SW</td>
+        <td>11/12/2024</td>
       </tr>
     </tbody>
   </table>
