reformatted table IDs

--- a/table.html
+++ b/table.html
@@ -25,10 +25,10 @@
     <label for="gameType">Choose a Game Type:</label>
     <select id="gameType">
       <option value="301">301</option>
-      <option value="301-di-do">301 DI/DO</option>
+      <option value="301 DI/DO">301 DI/DO</option>
       <option value="501">501</option>
       <option value="901">901</option>
-      <option value="round">Round the Clock</option>
+      <option value="RTC">Round the Clock</option>
     </select>
     <br /><br />
     <label for="userScore">Enter your Book Score:</label>
@@ -52,7 +52,7 @@
   </table>
 
   <h2>301 DI/DO</h2>
-  <table id="table-301-di-do">
+  <table id="table-301 DI/DO">
     <thead>
       <tr><th>Books</th><th>Player</th><th>Date</th></tr>
     </thead>
@@ -85,7 +85,7 @@
   </table>
 
   <h2>Round the Clock</h2>
-  <table id="table-round">
+  <table id="table-RTC">
     <thead>
       <tr><th>Books</th><th>Player</th><th>Date</th></tr>
     </thead>
