--- a/table.html
+++ b/table.html
@@ -31,7 +31,8 @@
       <option value="RTC">Round the Clock</option>
     </select>
     <br /><br />
-    <label for="userScore">Enter your Book Score:</label>
+    <label for="userScore">Enter your Book Score:</label><br>
+    <small>Convert fraction to decimal (example: 1/3 = .33)</small><br>
     <input type="number" id="userScore" step="0.01" />
     <button onclick="checkBookScore()">Check Score</button>
     <p id="resultMessage"></p>
