added dart board icon to table page header

--- a/table.html
+++ b/table.html
@@ -18,7 +18,10 @@
   </style>
 </head>
 <body>
-  <h1>Durts Records</h1>
+  <h1>
+    <img src="dart_board_2.png" alt="Durts Icon" style="height: 1.2em; vertical-align: middle; margin-right: 0.4em;">
+    Durts Records
+  </h1>
   <p><a href="index.html">Back to Homepage</a></p>
 
   <div class="score-input">
